Update smoke test